hiding things while i set up server.js

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <script defer src="./config.js"></script>
-    <script type="module" src="script.js"></script>
+    <!-- <script defer src="./config.env"></script> -->
+    <!-- <script type="module" src="script.js"></script> -->
     <title>Gamer</title>
   </head>
   <body>
