firebase functions with my own api calling steam

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <!-- <script defer src="./config.env"></script> -->
-    <!-- <script type="module" src="script.js"></script> -->
+    <script type="module" src="script.js"></script>
     <title>Gamer</title>
   </head>
   <body>
