--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- idk what this is -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- STYLE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- FIREBASE -->
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.17.1/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -46,12 +58,143 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <!-- <script defer src="./config.env"></script> -->
-    <script type="module" src="script.js"></script>
+    <script type="module" src="receivingData.js"></script>
+    <script type="module" src="domManipulation.js"></script>
     <title>Gamer</title>
   </head>
   <body>
-    <h1>GREATNESS LIES AHEAD</h1>
+    <form action="" class="cookies-request-form" aria-hidden="false">
+      <p class="cookies-request--text">
+        I use cookies so I can limit number of requests to APIs. Just accept so
+        I don't have to limit your experience homie. Unless you're only here for
+        one visit, then whatever.
+      </p>
+      <div class="cookies-request-btns">
+        <button type="submit" name="accept" class="btn-cookies">Accept</button>
+        <button type="submit" name="decline" class="btn-cookies">
+          Decline
+        </button>
+      </div>
+    </form>
+    <!-- <h1>GREATNESS LIES AHEAD</h1> -->
     <button type="button" class="btn-request-data">REQUEST DATA</button>
+
+    <header class="header" id="header">
+      <h2 class="my-name">Max</h2>
+      <div class="social-link-list">
+        <a
+          rel="noreferrer noopener"
+          href="https://twitter.com/TheMaxPorter"
+          title="twitter link"
+          class="social-link-item"
+          target="_blank"
+          ><ion-icon name="logo-twitter" class="social-link-icon"> </ion-icon
+        ></a>
+        <a
+          rel="noreferrer noopener"
+          href="https://www.twitch.tv/maxabajillion"
+          title="twitch link"
+          class="social-link-item"
+          target="_blank"
+          ><ion-icon name="logo-twitch" class="social-link-icon"></ion-icon
+        ></a>
+
+        <a
+          rel="noreferrer noopener"
+          href="https://www.youtube.com/@maxabajillion"
+          title="youtube link"
+          class="social-link-item"
+          target="_blank"
+        >
+          <ion-icon name="logo-youtube" class="social-link-icon"></ion-icon
+        ></a>
+      </div>
+    </header>
+    <main class="main" id="main">
+      <!-- game content -->
+      <section class="section section--games-list">
+        <div class="game-item">
+          <img
+            class="game-item--bg-img"
+            src="https://via.placeholder.com/150"
+            alt="game image"
+          />
+          <h3 class="game-title">Game Title</h3>
+          <div class="more-game-info">
+            <p class="info-game-playtime">100h 24min</p>
+            <p class="info-game-last-played">Last played 2 days ago</p>
+            <p class="info-game-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
+              reiciendis molestiae necessitatibus iure ipsum vitae fuga, labore
+              maxime aliquam ab!
+            </p>
+            <a
+              rel="noreferrer noopener"
+              href="https://store.steampowered.com/app/gameId"
+              class="info-game-storepage"
+              target="_blank"
+              >Go to Store</a
+            >
+          </div>
+        </div>
+        <div class="game-item">
+          <img
+            class="game-item--bg-img"
+            src="https://via.placeholder.com/150"
+            alt="game image"
+          />
+          <h3 class="game-title">Game Title</h3>
+          <div class="more-game-info">
+            <p class="info-game-playtime">100h 24min</p>
+            <p class="info-game-last-played">Last played 2 days ago</p>
+            <p class="info-game-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
+              reiciendis molestiae necessitatibus iure ipsum vitae fuga, labore
+              maxime aliquam ab!
+            </p>
+            <a
+              rel="noreferrer noopener"
+              href="https://store.steampowered.com/app/gameId"
+              class="info-game-storepage"
+              target="_blank"
+              >Go to Store</a
+            >
+          </div>
+        </div>
+        <div class="game-item">
+          <img
+            class="game-item--bg-img"
+            src="https://via.placeholder.com/150"
+            alt="game image"
+          />
+          <h3 class="game-title">Game Title</h3>
+          <div class="more-game-info">
+            <p class="info-game-playtime">100h 24min</p>
+            <p class="info-game-last-played">Last played 2 days ago</p>
+            <p class="info-game-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
+              reiciendis molestiae necessitatibus iure ipsum vitae fuga, labore
+              maxime aliquam ab!
+            </p>
+            <a
+              rel="noreferrer noopener"
+              href="https://store.steampowered.com/app/gameId"
+              class="info-game-storepage"
+              target="_blank"
+              >Go to Store</a
+            >
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
