--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="mediaQueries.css" />
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="style.css" />
 
@@ -65,9 +66,8 @@
   <body>
     <form action="" class="cookies-request-form" aria-hidden="false">
       <p class="cookies-request--text">
-        I use cookies so I can limit number of requests to APIs. Just accept so
-        I don't have to limit your experience homie. Unless you're only here for
-        one visit, then whatever.
+        I don't use any personal info from you. I literally don't even use
+        cookies yet. I just want to know if you're cool with it. Accept cookies?
       </p>
       <div class="cookies-request-btns">
         <button type="submit" name="accept" class="btn-cookies">Accept</button>
@@ -77,10 +77,16 @@
       </div>
     </form>
     <!-- <h1>GREATNESS LIES AHEAD</h1> -->
-    <button type="button" class="btn-request-data">REQUEST DATA</button>
+    <!-- <button type="button" class="btn-request-data">REQUEST DATA</button> -->
 
     <header class="header" id="header">
-      <h2 class="my-name">Max</h2>
+      <div class="username-info">
+        <div class="username-online">
+          <span class="my-name">Loading...</span>
+          <span class="online-indicator" aria-disabled="false">🟢 STATUS</span>
+        </div>
+        <p class="account-created">Account created -- years ago.</p>
+      </div>
       <div class="social-link-list">
         <a
           rel="noreferrer noopener"
@@ -112,17 +118,14 @@
     </header>
     <main class="main" id="main">
       <!-- game content -->
+      <p class="owned-games-title">TOP PLAYED GAMES</p>
       <section class="section section--games-list">
         <div class="game-item">
-          <img
-            class="game-item--bg-img"
-            src="https://via.placeholder.com/150"
-            alt="game image"
-          />
-          <h3 class="game-title">Game Title</h3>
+          <div class="game-item--bg-img placeholder-img"></div>
+          <h3 class="game-title">Loading Game...</h3>
           <div class="more-game-info">
-            <p class="info-game-playtime">100h 24min</p>
-            <p class="info-game-last-played">Last played 2 days ago</p>
+            <p class="info-game-playtime">-- hours -- minutes</p>
+            <p class="info-game-last-played">Last played -- days ago</p>
             <p class="info-game-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
               reiciendis molestiae necessitatibus iure ipsum vitae fuga, labore
@@ -133,20 +136,16 @@
               href="https://store.steampowered.com/app/gameId"
               class="info-game-storepage"
               target="_blank"
-              >Go to Store</a
+              >---- Store Page</a
             >
           </div>
         </div>
         <div class="game-item">
-          <img
-            class="game-item--bg-img"
-            src="https://via.placeholder.com/150"
-            alt="game image"
-          />
-          <h3 class="game-title">Game Title</h3>
+          <div class="game-item--bg-img placeholder-img"></div>
+          <h3 class="game-title">Loading Game...</h3>
           <div class="more-game-info">
-            <p class="info-game-playtime">100h 24min</p>
-            <p class="info-game-last-played">Last played 2 days ago</p>
+            <p class="info-game-playtime">-- hours -- minutes</p>
+            <p class="info-game-last-played">Last played -- days ago</p>
             <p class="info-game-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
               reiciendis molestiae necessitatibus iure ipsum vitae fuga, labore
@@ -157,20 +156,16 @@
               href="https://store.steampowered.com/app/gameId"
               class="info-game-storepage"
               target="_blank"
-              >Go to Store</a
+              >---- Store Page</a
             >
           </div>
         </div>
         <div class="game-item">
-          <img
-            class="game-item--bg-img"
-            src="https://via.placeholder.com/150"
-            alt="game image"
-          />
-          <h3 class="game-title">Game Title</h3>
+          <div class="game-item--bg-img placeholder-img"></div>
+          <h3 class="game-title">Loading Game...</h3>
           <div class="more-game-info">
-            <p class="info-game-playtime">100h 24min</p>
-            <p class="info-game-last-played">Last played 2 days ago</p>
+            <p class="info-game-playtime">-- hours -- minutes</p>
+            <p class="info-game-last-played">Last played -- days ago</p>
             <p class="info-game-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
               reiciendis molestiae necessitatibus iure ipsum vitae fuga, labore
@@ -181,7 +176,7 @@
               href="https://store.steampowered.com/app/gameId"
               class="info-game-storepage"
               target="_blank"
-              >Go to Store</a
+              >---- Store Page</a
             >
           </div>
         </div>
