more media queries

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,14 @@
       <div class="social-link-list">
         <a
           rel="noreferrer noopener"
+          href="https://steamcommunity.com/profiles/76561198091780294/"
+          title="steam link"
+          class="social-link-item"
+          target="_blank"
+          ><ion-icon name="logo-steam" class="social-link-icon"></ion-icon
+        ></a>
+        <a
+          rel="noreferrer noopener"
           href="https://twitter.com/TheMaxPorter"
           title="twitter link"
           class="social-link-item"
