removed playtime minutes, easier local testing

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
           <div class="game-item--bg-img placeholder-img"></div>
           <h3 class="game-title">Loading Game...</h3>
           <div class="more-game-info">
-            <p class="info-game-playtime">-- hours -- minutes</p>
+            <p class="info-game-playtime">-- hours</p>
             <p class="info-game-last-played">Last played -- days ago</p>
             <p class="info-game-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
@@ -152,7 +152,7 @@
           <div class="game-item--bg-img placeholder-img"></div>
           <h3 class="game-title">Loading Game...</h3>
           <div class="more-game-info">
-            <p class="info-game-playtime">-- hours -- minutes</p>
+            <p class="info-game-playtime">-- hours</p>
             <p class="info-game-last-played">Last played -- days ago</p>
             <p class="info-game-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
@@ -172,7 +172,7 @@
           <div class="game-item--bg-img placeholder-img"></div>
           <h3 class="game-title">Loading Game...</h3>
           <div class="more-game-info">
-            <p class="info-game-playtime">-- hours -- minutes</p>
+            <p class="info-game-playtime">-- hours</p>
             <p class="info-game-last-played">Last played -- days ago</p>
             <p class="info-game-description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit
